--- a/app/notebook.ipynb
+++ b/app/notebook.ipynb
@@ -1549,9 +1549,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sitemaper initialized.\n",
+      "webextractor initialized.\n",
+      "all tools initialized.\n"
+     ]
+    }
+   ],
    "source": [
     "from tools import vectorstore\n",
     "store = vectorstore.load_vectorstore()"
@@ -1567,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1577,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1588,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1597,7 +1607,7 @@
        "[Document(page_content='#1 E-Government: Braucht es spezifische rechtliche Grundlagen?\\nDie Frage nach rechtlichen Grundlagen für E-Government ist berechtigt: E-Government ist Verwaltungshandeln und Leistungserbringung durch die Verwaltung - in elektronischer Form. Ist es notwendig, der Verwaltung das Handeln in der elektronischen Form zu erlauben? Und vor allem: Genügt das? Oder sind noch andere Fragen zu regeln? Antworten gibt es im Wissensblog Recht der Digitalen Verwaltung Schweiz. Ein Beitrag von Timur Acemoglu.\\nTimur Acemoglu\\nVerein eJustice.CH\\nTimur Acemoglu ist Jurist und Co-Geschäftsführer des\\xa0Vereins eJustice.CH. Der Verein\\xa0hat zum Ziel, den Einsatz von Informationstechnologie zur Steigerung der Leistungsfähigkeit und Bürgernähe in der Rechtspflege von Bund, Kantonen und Gemeinden zu fördern.\\nSelbstverständlich ist E-Government mehr als nur die identische Leistungserbringung der Verwaltung in elektronischer statt analoger Form.\\nGrundlage und Schranke des staatlichen Handelns ist das Recht - diesen in der Bundesverfassung verankerten Grundsatz haben Sie sicher auch schon von einer Juristin oder einem Juristen gehört. Und das Recht regelt in Verfahrensnormen oft auch die zulässige Form der Kommunikation zwischen Behörden und betroffenen Personen.', metadata={'source': 'https://www.digitale-verwaltung-schweiz.ch/umsetzungsplan/dienstleistungen/wissensblog-recht/willkommen-im-wissensblog-e-government-recht'})]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1608,17 +1618,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[(Document(page_content='#1 E-Government: Braucht es spezifische rechtliche Grundlagen?\\nDie Frage nach rechtlichen Grundlagen für E-Government ist berechtigt: E-Government ist Verwaltungshandeln und Leistungserbringung durch die Verwaltung - in elektronischer Form. Ist es notwendig, der Verwaltung das Handeln in der elektronischen Form zu erlauben? Und vor allem: Genügt das? Oder sind noch andere Fragen zu regeln? Antworten gibt es im Wissensblog Recht der Digitalen Verwaltung Schweiz. Ein Beitrag von Timur Acemoglu.\\nTimur Acemoglu\\nVerein eJustice.CH\\nTimur Acemoglu ist Jurist und Co-Geschäftsführer des\\xa0Vereins eJustice.CH. Der Verein\\xa0hat zum Ziel, den Einsatz von Informationstechnologie zur Steigerung der Leistungsfähigkeit und Bürgernähe in der Rechtspflege von Bund, Kantonen und Gemeinden zu fördern.\\nSelbstverständlich ist E-Government mehr als nur die identische Leistungserbringung der Verwaltung in elektronischer statt analoger Form.\\nGrundlage und Schranke des staatlichen Handelns ist das Recht - diesen in der Bundesverfassung verankerten Grundsatz haben Sie sicher auch schon von einer Juristin oder einem Juristen gehört. Und das Recht regelt in Verfahrensnormen oft auch die zulässige Form der Kommunikation zwischen Behörden und betroffenen Personen.', metadata={'source': 'https://www.digitale-verwaltung-schweiz.ch/umsetzungsplan/dienstleistungen/wissensblog-recht/willkommen-im-wissensblog-e-government-recht'}),\n",
-       "  0.25325978)]"
+       "  0.25331953)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1629,17 +1639,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[(Document(page_content='#1 E-Government: Braucht es spezifische rechtliche Grundlagen?\\nDie Frage nach rechtlichen Grundlagen für E-Government ist berechtigt: E-Government ist Verwaltungshandeln und Leistungserbringung durch die Verwaltung - in elektronischer Form. Ist es notwendig, der Verwaltung das Handeln in der elektronischen Form zu erlauben? Und vor allem: Genügt das? Oder sind noch andere Fragen zu regeln? Antworten gibt es im Wissensblog Recht der Digitalen Verwaltung Schweiz. Ein Beitrag von Timur Acemoglu.\\nTimur Acemoglu\\nVerein eJustice.CH\\nTimur Acemoglu ist Jurist und Co-Geschäftsführer des\\xa0Vereins eJustice.CH. Der Verein\\xa0hat zum Ziel, den Einsatz von Informationstechnologie zur Steigerung der Leistungsfähigkeit und Bürgernähe in der Rechtspflege von Bund, Kantonen und Gemeinden zu fördern.\\nSelbstverständlich ist E-Government mehr als nur die identische Leistungserbringung der Verwaltung in elektronischer statt analoger Form.\\nGrundlage und Schranke des staatlichen Handelns ist das Recht - diesen in der Bundesverfassung verankerten Grundsatz haben Sie sicher auch schon von einer Juristin oder einem Juristen gehört. Und das Recht regelt in Verfahrensnormen oft auch die zulässige Form der Kommunikation zwischen Behörden und betroffenen Personen.', metadata={'source': 'https://www.digitale-verwaltung-schweiz.ch/umsetzungsplan/dienstleistungen/wissensblog-recht/willkommen-im-wissensblog-e-government-recht'}),\n",
-       "  0.8209182935583024)]"
+       "  0.8209735480767001)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
