notebook.ipynb removed output.

--- a/app/notebook.ipynb
+++ b/app/notebook.ipynb
@@ -13,6 +13,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## PDF "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tools import pdfextractor\n",
+    "foo = pdfextractor"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## make some xml sitemaps"
    ]
   },
