solve package dependency

--- a/app/notebook_ask.ipynb
+++ b/app/notebook_ask.ipynb
@@ -101,19 +101,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = chainbroker.ask_function_agent(\n",
-    "    query=query,\n",
-    "    vectorstore=store,\n",
-    ")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(res)"
+    "#res = chainbroker.ask_function_agent(\n",
+    "#    query=query,\n",
+    "#    vectorstore=store,\n",
+    "#)\n"
    ]
   }
  ],
