--- a/app/notebook_ask.ipynb
+++ b/app/notebook_ask.ipynb
@@ -74,13 +74,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ai import chainbroker\n",
+    "\"\"\" from ai import chainbroker\n",
     "chainbroker.ask_agent(\n",
     "    query=query, \n",
     "    model=\"gpt-3.5-turbo\",\n",
     "    vectorstore=store, \n",
     "    verbose=False\n",
-    "    )"
+    "    ) \"\"\""
    ]
   },
   {
