simple_sequential_chain with sqlite cache

--- a/app/notebook_ask.ipynb
+++ b/app/notebook_ask.ipynb
@@ -21,8 +21,8 @@
     "embeddings = vectorstore.get_embeddings()\n",
     "\n",
     "query = \"\"\"\n",
-    "Ich bin geschieden und habe zwei Kinder. Hat mein Ex-Frau Anspruch auf Familienzulagen? \n",
-    "meine Ex-Frau ist arbeitslos und die Kinder leben bei ihr\"\"\""
+    "Welche staatlichen Zulagen können in der Schweiz Familien in Anspruch nehmen?\n",
+    "\"\"\""
    ]
   },
   {
